// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposal Related Cloud Functions Funding Proposal Creation should fail on invalid input 1`] = `
Array [
  "commonId is a required field",
  "amount is a required field",
]
`;

exports[`Proposal Related Cloud Functions Join Proposal Creation should fail validation on invalid input 1`] = `
Array [
  "commonId is a required field",
  "funding is a required field",
]
`;
